stat is added
